Fixed back button as it was too close to the edge

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -203,6 +203,7 @@
   display: inline-block;
   text-decoration: none;
   padding: 5px;
+  margin: 10px;
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
 }
@@ -210,7 +211,7 @@
 
 .h2-building{
   display: inline-block;
-  margin-top: 3%;
+  margin-top: 5%;
   position: absolute;
   font-size: 20px;
   left: 50%;
